tests/invalid_lex/lex01.java
class Main {
    static String a = "Hello world \812";
}
